implemented updateRrmBulk API on Equipment service
